Let's try some more

--- a/.github/workflows/python2.yaml
+++ b/.github/workflows/python2.yaml
@@ -20,25 +20,29 @@ env:
 permissions:
   contents: read
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   linux:
     runs-on: ${{ matrix.platform.runner }}
     strategy:
+      fail-fast: false
       matrix:
         platform:
           - runner: ubuntu-22.04
             target: x86_64
             duckdb_target: linux-amd64
-          # - runner: ubuntu-22.04
-          #   target: x86
-          # - runner: ubuntu-22.04
-          #   target: aarch64
-          # - runner: ubuntu-22.04
-          #   target: armv7
-          # - runner: ubuntu-22.04
-          #   target: s390x
-          # - runner: ubuntu-22.04
-          #   target: ppc64le
+          - runner: ubuntu-22.04
+            target: x86
+            duckdb_target: linux-amd64
+          - runner: ubuntu-22.04
+            target: aarch64
+            duckdb_target: linux-arm64
+          - runner: ubuntu-22.04
+            target: armv7
+            duckdb_target: linux-arm64
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
