--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -15,7 +15,7 @@ on:
 
 env:
   DUCKDB_VERSION: 1.3.2
-  PYTHON_VERSION: 3.13
+  PYTHON_VERSION: 3.9
 
 permissions:
   contents: read
@@ -37,6 +37,9 @@ jobs:
           - runner: ubuntu-22.04
             target: aarch64
             duckdb_target: linux-arm64
+          - runner: macos-latest
+            target: universal2-apple-darwin
+            duckdb_target: macos-amd64
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
@@ -47,6 +50,10 @@ jobs:
         with:
           enable-cache: true
           python-version: ${{ env.PYTHON_VERSION }}
+      - name: Setup DuckDB (macOS only)
+        if: ${{ matrix.platform.runner == 'macos-latest' }}
+        run: |
+          brew install duckdb
       - name: Setup DuckDB (Ubuntu only)
         if: ${{ matrix.platform.runner == 'ubuntu-22.04' }}
         run: |
@@ -69,7 +76,7 @@ jobs:
           target: ${{ matrix.platform.target }}
           args: --release --out dist --zig --interpreter python${{ env.PYTHON_VERSION }}t --features python
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-          manylinux: auto
+          manylinux: "2014" # Ensures glibc 2.17+ compatibility
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
