--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -74,7 +74,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           target: ${{ matrix.platform.target }}
-          args: --release --out dist --zig --interpreter python${{ env.PYTHON_VERSION }}t --features python
+          args: --release --out dist --zig --interpreter python${{ env.PYTHON_VERSION }} --features python
           sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
           manylinux: "2014" # Ensures glibc 2.17+ compatibility
       - name: Upload wheels
