Try just universal2

--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -38,7 +38,7 @@ jobs:
             target: aarch64
             duckdb_target: linux-arm64
           - runner: macos-latest
-            target: universal2-apple-darwin
+            target: universal2
             duckdb_target: macos-amd64
     steps:
       - uses: actions/checkout@v4
