--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,12 @@ build-backend = "maturin"
 name = "silk_chiffon"
 version = "0.1.0"
 description = "Fast Arrow format conversions"
-requires-python = ">=3.11"
+requires-python = ">=3.9"
 classifiers = [
     "Programming Language :: Rust",
     "Programming Language :: Python :: Implementation :: CPython",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
@@ -35,7 +37,7 @@ features = ["python"]
 
 [tool.ruff]
 line-length = 88
-target-version = "py311"
+target-version = "py39"
 
 [tool.ruff.lint]
 select = ["E", "F", "I"]
