--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -50,19 +50,19 @@ jobs:
         with:
           enable-cache: true
           python-version: ${{ env.PYTHON_VERSION }}
-      # - name: Setup DuckDB (macOS only)
-      #   if: ${{ matrix.platform.runner == 'macos-latest' }}
-      #   run: |
-      #     brew install duckdb
-      # - name: Setup DuckDB (Ubuntu only)
-      #   if: ${{ matrix.platform.runner == 'ubuntu-22.04' }}
-      #   run: |
-      #     curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-${{ matrix.platform.duckdb_target }}.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
-      #     unzip libduckdb-${{ matrix.platform.duckdb_target }}.zip -d libduckdb
-      #     sudo mv libduckdb/duckdb.* /usr/local/include/
-      #     sudo mv libduckdb/libduckdb.so /usr/local/lib/
-      #     sudo ldconfig /usr/local/lib
-      #     rm -rf libduckdb libduckdb-${{ matrix.platform.duckdb_target }}.zip
+      - name: Setup DuckDB (macOS only)
+        if: ${{ matrix.platform.runner == 'macos-latest' }}
+        run: |
+          brew install duckdb
+      - name: Setup DuckDB (Ubuntu only)
+        if: ${{ matrix.platform.runner == 'ubuntu-22.04' }}
+        run: |
+          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-${{ matrix.platform.duckdb_target }}.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
+          unzip libduckdb-${{ matrix.platform.duckdb_target }}.zip -d libduckdb
+          sudo mv libduckdb/duckdb.* /usr/local/include/
+          sudo mv libduckdb/libduckdb.so /usr/local/lib/
+          sudo ldconfig /usr/local/lib
+          rm -rf libduckdb libduckdb-${{ matrix.platform.duckdb_target }}.zip
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
