--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -34,7 +34,7 @@ jobs:
           - runner: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
             duckdb_target: linux-amd64
-          - runner: ubuntu-22.04
+          - runner: ubuntu-22.04-arm
             target: aarch64-unknown-linux-gnu
             duckdb_target: linux-arm64
           - runner: macos-latest
