--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,8 +2,12 @@ name: Rust CI
 
 on:
   push:
+    branches:
+      - main
+    tags:
+      - "*"
   pull_request:
-    branches: [main]
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -18,7 +22,6 @@ jobs:
     name: Rust (${{ matrix.rust }}) CI for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
-      # This defaults to true so we need to explicitly set it to false
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest]
