--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -25,7 +25,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  linux:
+  build_and_check:
     runs-on: ${{ matrix.platform.runner }}
     strategy:
       fail-fast: false
