--- a/.github/workflows/rust-release-dev.yml
+++ b/.github/workflows/rust-release-dev.yml
@@ -5,6 +5,11 @@ on:
 
 env:
   DUCKDB_VERSION: 1.3.2
+  PYTHON_VERSION: 3.9
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   create-release:
@@ -31,41 +36,37 @@ jobs:
   build-and-upload:
     needs: create-release
     strategy:
+      fail-fast: false
       matrix:
         include:
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             artifact_name: silk-chiffon-linux-x64
+            duckdb_target: linux-amd64
+          - os: ubuntu-24.04-arm
+            target: aarch64-unknown-linux-gnu
+            artifact_name: silk-chiffon-linux-arm64
+            duckdb_target: linux-arm64
           - os: macos-latest
             target: aarch64-apple-darwin
             artifact_name: silk-chiffon-macos-arm64
+            duckdb_target: macos-arm64
     runs-on: ${{ matrix.os }}
     permissions:
       contents: write
     steps:
       - uses: actions/checkout@v4
-      - name: Setup DuckDB (Ubuntu amd64 only)
-        if: ${{ matrix.os == 'ubuntu-latest' }}
+      - name: Setup DuckDB (Linux only)
+        if: ${{ startsWith(matrix.os, 'ubuntu') }}
         run: |
           sudo apt-get update
           sudo apt-get install -y curl unzip
-          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-linux-amd64.zip
-          unzip libduckdb-linux-amd64.zip -d libduckdb
+          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-${{ matrix.duckdb_target }}.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
+          unzip libduckdb-${{ matrix.duckdb_target }}.zip -d libduckdb
           sudo mv libduckdb/duckdb.* /usr/local/include/
           sudo mv libduckdb/libduckdb.so /usr/local/lib/
           sudo ldconfig /usr/local/lib
-          rm -rf libduckdb libduckdb-linux-amd64.zip
-      - name: Setup DuckDB (Ubuntu arm64 only)
-        if: ${{ matrix.os == 'ubuntu-24.04-arm' }}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl unzip
-          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-linux-arm64.zip
-          unzip libduckdb-linux-arm64.zip -d libduckdb
-          sudo mv libduckdb/duckdb.* /usr/local/include/
-          sudo mv libduckdb/libduckdb.so /usr/local/lib/
-          sudo ldconfig /usr/local/lib
-          rm -rf libduckdb libduckdb-linux-arm64.zip
+          rm -rf libduckdb libduckdb-${{ matrix.duckdb_target }}.zip
       - name: Setup DuckDB (macOS only)
         if: ${{ matrix.os == 'macos-latest' }}
         run: |
@@ -104,62 +105,86 @@ jobs:
   build-wheels:
     needs: create-release
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest]
-        python-version: ["3.11", "3.12", "3.13"]
-    runs-on: ${{ matrix.os }}
+        platform:
+          - runner: ubuntu-22.04
+            os: linux
+            short_target: x86_64
+            target: x86_64-unknown-linux-gnu
+            duckdb_target: linux-amd64
+          - runner: ubuntu-22.04-arm
+            os: linux
+            short_target: aarch64
+            target: aarch64-unknown-linux-gnu
+            duckdb_target: linux-arm64
+          - runner: macos-latest
+            os: macos
+            short_target: arm64
+            target: universal2-apple-darwin
+            duckdb_target: macos-arm64
+    runs-on: ${{ matrix.platform.runner }}
     permissions:
       contents: write
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup DuckDB (Ubuntu)
-        if: matrix.os == 'ubuntu-latest'
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Setup DuckDB (Linux)
+        if: ${{ matrix.platform.os == 'linux' }}
         run: |
           sudo apt-get update
           sudo apt-get install -y curl unzip build-essential
-          curl -L -O https://github.com/duckdb/duckdb/releases/download/v1.3.2/libduckdb-linux-amd64.zip
-          unzip libduckdb-linux-amd64.zip -d libduckdb
+          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-${{ matrix.platform.duckdb_target }}.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
+          unzip libduckdb-${{ matrix.platform.duckdb_target }}.zip -d libduckdb
           sudo mv libduckdb/duckdb.* /usr/local/include/
           sudo mv libduckdb/libduckdb.so /usr/local/lib/
           sudo ldconfig /usr/local/lib
-          rm -rf libduckdb libduckdb-linux-amd64.zip
-
+          rm -rf libduckdb libduckdb-${{ matrix.platform.duckdb_target }}.zip
       - name: Setup DuckDB (macOS)
-        if: matrix.os == 'macos-latest'
+        if: ${{ matrix.platform.os == 'macos' }}
         run: |
           brew install duckdb
-
-      # Setup Rust
-      - name: Setup Rust
-        run: |
-          rustup override set stable
-          rustup update
-          rustup show
 
       - name: Install uv and set Python version
         uses: astral-sh/setup-uv@v6
         with:
           enable-cache: true
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install dependencies
-        run: uv sync --locked
-
-      - name: Build Python wheel (Linux)
-        if: matrix.os == 'ubuntu-latest'
-        run: |
-          uv run maturin build --release --features python
-
-      - name: Build Python wheel (macOS)
-        if: matrix.os == 'macos-latest'
-        run: |
-          uv run maturin build --release --features python
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Build wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist ${{ matrix.platform.os != 'macos' && '--zig' || '' }}
+          sccache: true
+          manylinux: auto
+      - name: Build free-threaded wheels
+        uses: PyO3/maturin-action@v1
+        with:
+          target: ${{ matrix.platform.target }}
+          args: --release --out dist ${{ matrix.platform.os != 'macos' && '--zig' || '' }} --interpreter python${{ env.PYTHON_VERSION }} --features python
+          sccache: true
+          manylinux: "2014"
+      - name: Sync uv
+        run: uv sync --frozen
+      - name: Install silk_chiffon
+        run: uv pip install silk_chiffon --find-links dist --force-reinstall
+      - name: Check Python formatting
+        run: uv run ruff format --check
+      - name: Check Python linting
+        run: uv run ruff check
+      - name: Check Python types
+        run: uv run pyright
+      - name: Run pytest
+        run: uv run pytest
 
       - name: Upload wheels to release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          for wheel in target/wheels/*.whl; do
+          for wheel in dist/*.whl; do
             gh release upload "${{ needs.create-release.outputs.tag }}" "$wheel" --clobber
           done
