--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ clio = { version = "0.3.5", features = ["clap-parse"] }
 datafusion = "48.0.1"
 duckdb = { version = "1.3.2", features = ["bundled"] }
 futures = "0.3.31"
+glob = "0.3.1"
 pg_escape = "0.1.1"
 parquet = { version = "55.2.0", features = [
   "default",
