--- a/.github/workflows/rust-release-dev.yml
+++ b/.github/workflows/rust-release-dev.yml
@@ -6,6 +6,7 @@ on:
 env:
   DUCKDB_VERSION: 1.3.2
   PYTHON_VERSION: 3.9
+  RUST_BACKTRACE: 1
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
