--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,7 @@ tokio = { version = "1.47.1", features = ["full"] }
 sanitize-filename = "0.6.0"
 serde_json = "1.0"
 serde = { version = "1.0.219", features = ["derive"] }
+async-trait = "0.1.89"
 
 [features]
 default = []
