--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -26,29 +26,13 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build_and_check:
-    runs-on: ${{ matrix.platform.runner }}
-    strategy:
-      fail-fast: false
-      matrix:
-        platform:
-          - runner: ubuntu-22.04
-            os: linux
-            short_target: x86_64
-            target: x86_64-unknown-linux-gnu
-            duckdb_target: linux-amd64
-          - runner: ubuntu-22.04-arm
-            os: linux
-            short_target: aarch64
-            target: aarch64-unknown-linux-gnu
-            duckdb_target: linux-arm64
-          - runner: macos-latest
-            os: macos
-            short_target: arm64
-            target: universal2-apple-darwin
-            duckdb_target: macos-arm64
+  setup:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-zigbuild,just
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
@@ -57,88 +41,40 @@ jobs:
         with:
           enable-cache: true
           python-version: ${{ env.PYTHON_VERSION }}
-      - name: Setup DuckDB (macOS only)
-        if: ${{ matrix.platform.os == 'macos' }}
+      - name: Setup DuckDB
         run: |
-          brew install duckdb
-      - name: Setup DuckDB (Linux only)
-        if: ${{ matrix.platform.os == 'linux' }}
-        run: |
-          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-${{ matrix.platform.duckdb_target }}.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
-          unzip libduckdb-${{ matrix.platform.duckdb_target }}.zip -d libduckdb
+          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-linux-amd64.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
+          unzip libduckdb-linux-amd64.zip -d libduckdb
           sudo mv libduckdb/duckdb.* /usr/local/include/
           sudo mv libduckdb/libduckdb.so /usr/local/lib/
           sudo ldconfig /usr/local/lib
-          rm -rf libduckdb libduckdb-${{ matrix.platform.duckdb_target }}.zip
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
+          rm -rf libduckdb libduckdb-linux-amd64.zip
+      - uses: actions/setup-python@v5
         with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist ${{ matrix.platform.os != 'macos' && '--zig' || '' }}
-          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-          manylinux: auto
-      - name: Build free-threaded wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist ${{ matrix.platform.os != 'macos' && '--zig' || '' }} --interpreter python${{ env.PYTHON_VERSION }} --features python
-          sccache: ${{ !startsWith(github.ref, 'refs/tags/') }}
-          manylinux: "2014" # Ensures glibc 2.17+ compatibility
-      - name: Upload wheels
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-${{ matrix.platform.os }}-${{ matrix.platform.short_target }}
-          path: dist
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Sync uv
         run: uv sync --frozen
-      - name: Install silk_chiffon
-        run: uv pip install silk_chiffon --find-links dist --force-reinstall
+  check_format:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
       - name: Check Python formatting
         run: uv run ruff format --check
+  check_lint:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
       - name: Check Python linting
         run: uv run ruff check
+  check_types:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
       - name: Check Python types
         run: uv run pyright
+  run_tests:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
       - name: Run pytest
         run: uv run pytest
-  sdist:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: Build sdist
-        uses: PyO3/maturin-action@v1
-        with:
-          command: sdist
-          args: --out dist
-      - name: Upload sdist
-        uses: actions/upload-artifact@v4
-        with:
-          name: wheels-sdist
-          path: dist
-
-  # release:
-  #   name: Release
-  #   runs-on: ubuntu-latest
-  #   if: ${{ startsWith(github.ref, 'refs/tags/') || github.event_name == 'workflow_dispatch' }}
-  #   needs: [linux, sdist]
-  #   permissions:
-  #     # Use to sign the release artifacts
-  #     id-token: write
-  #     # Used to upload release artifacts
-  #     contents: write
-  #     # Used to generate artifact attestation
-  #     attestations: write
-  #   steps:
-  #     - uses: actions/download-artifact@v4
-  #     - name: Generate artifact attestation
-  #       uses: actions/attest-build-provenance@v2
-  #       with:
-  #         subject-path: "wheels-*/*"
-  #     - name: Publish to PyPI
-  #       if: ${{ startsWith(github.ref, 'refs/tags/') }}
-  #       uses: PyO3/maturin-action@v1
-  #       env:
-  #         MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
-  #       with:
-  #         command: upload
-  #         args: --non-interactive --skip-existing wheels-*/*
