--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -53,7 +53,7 @@ jobs:
         with:
           python-version: ${{ env.PYTHON_VERSION }}
       - name: Sync uv
-        run: uv sync --frozen -vvv
+        run: uv sync
   check_format:
     runs-on: ubuntu-latest
     needs: setup
