--- a/.github/workflows/python.yaml
+++ b/.github/workflows/python.yaml
@@ -26,55 +26,27 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: taiki-e/install-action@v2
-        with:
-          tool: cargo-zigbuild,just
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-      - name: Install uv and set the python version
-        uses: astral-sh/setup-uv@v6
-        with:
-          enable-cache: true
-          python-version: ${{ env.PYTHON_VERSION }}
-      - name: Setup DuckDB
-        run: |
-          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-linux-amd64.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
-          unzip libduckdb-linux-amd64.zip -d libduckdb
-          sudo mv libduckdb/duckdb.* /usr/local/include/
-          sudo mv libduckdb/libduckdb.so /usr/local/lib/
-          sudo ldconfig /usr/local/lib
-          rm -rf libduckdb libduckdb-linux-amd64.zip
-      - uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-      - name: Sync uv
-        run: uv sync --frozen -vv
   check_format:
     runs-on: ubuntu-latest
-    needs: setup
     steps:
+      - uses: ./.github/actions/setup-python-env
       - name: Check Python formatting
         run: uv run ruff format --check
   check_lint:
     runs-on: ubuntu-latest
-    needs: setup
     steps:
+      - uses: ./.github/actions/setup-python-env
       - name: Check Python linting
         run: uv run ruff check
   check_types:
     runs-on: ubuntu-latest
-    needs: setup
     steps:
+      - uses: ./.github/actions/setup-python-env
       - name: Check Python types
         run: uv run pyright
   run_tests:
     runs-on: ubuntu-latest
-    needs: setup
     steps:
+      - uses: ./.github/actions/setup-python-env
       - name: Run pytest
         run: uv run pytest
