--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -12,7 +12,7 @@ runs:
     - name: Setup DuckDB
       shell: bash
       run: |
-        curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-linux-amd64.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
+        curl -L -O https://github.com/duckdb/duckdb/releases/download/v1.3.2/libduckdb-linux-amd64.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
         unzip libduckdb-linux-amd64.zip -d libduckdb
         sudo mv libduckdb/duckdb.* /usr/local/include/
         sudo mv libduckdb/libduckdb.so /usr/local/lib/
