--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -26,8 +26,13 @@ runs:
     - name: Cache uv environment
       uses: actions/cache@v4
       with:
-        path: .venv
-        key: uv-linux-amd64-${{ hashFiles('uv.lock') }}
+        path: |
+          .venv
+          ~/.cache/uv
+        key: uv-linux-amd64-python3.12-${{ hashFiles('uv.lock', 'pyproject.toml') }}
+        restore-keys: |
+          uv-linux-amd64-python3.12-
+          uv-linux-amd64
     - name: Sync uv
       run: uv sync --frozen -vv
       shell: bash
