--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ sanitize-filename = "0.6.0"
 serde_json = "1.0"
 serde = { version = "1.0.219", features = ["derive"] }
 async-trait = "0.1.89"
+strum = "0.27.2"
 
 [features]
 default = []
