--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,45 +24,45 @@ name = "silk-chiffon"
 path = "src/main.rs"
 
 [dependencies]
-anyhow = "1.0.98"
-arrow = { version = "55.2.0", features = ["default", "ipc_compression"] }
-clap = { version = "4.5.43", features = ["default", "derive"] }
-clio = { version = "0.3.5", features = ["clap-parse"] }
-datafusion = "49.0.0"
-duckdb = { version = "1.3.2", features = ["bundled"] }
-futures = "0.3.31"
-glob = "0.3.2"
-pg_escape = "0.1.1"
-parquet = { version = "55.2.0", features = [
+anyhow = "~1.0"
+arrow = { version = "~55.2", features = ["default", "ipc_compression"] }
+clap = { version = "~4.5", features = ["default", "derive"] }
+clio = { version = "~0.3", features = ["clap-parse"] }
+datafusion = "~49.0"
+duckdb = { version = "~1.3", features = ["bundled"] }
+futures = "~0.3"
+glob = "~0.3"
+pg_escape = "~0.1"
+parquet = { version = "~55.2", features = [
   "default",
   "async",
   "json",
   "arrow_canonical_extension_types",
 ] }
-pyo3 = { version = "0.25", features = [
+pyo3 = { version = "~0.25", features = [
   "abi3-py39",
   "anyhow",
   "extension-module",
 ], optional = true }
-sha2 = "0.10"
-tempfile = "3.20.0"
-tokio = { version = "1.47.1", features = ["full"] }
-sanitize-filename = "0.6.0"
-serde_json = "1.0"
-serde = { version = "1.0.219", features = ["derive"] }
-async-trait = "0.1.89"
-strum = "0.27.2"
+sha2 = "~0.10"
+tempfile = "~3.20"
+tokio = { version = "~1.47", features = ["full"] }
+sanitize-filename = "~0.6"
+serde_json = "~1.0"
+serde = { version = "~1.0", features = ["derive"] }
+async-trait = "~0.1"
+strum = "~0.27"
 
 [features]
 default = []
 python = ["pyo3"]
 
 [dev-dependencies]
-tempfile = "3.20.0"
-assert_cmd = "2.0.17"
-predicates = "3.1.3"
-rand = "0.9.2"
-criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
+tempfile = "~3.20"
+assert_cmd = "~2.0"
+predicates = "~3.1"
+rand = "~0.9"
+criterion = { version = "~0.7", features = ["html_reports", "async_tokio"] }
 
 [[bench]]
 name = "split_benchmark"
