--- a/.github/workflows/release-dev.yml
+++ b/.github/workflows/release-dev.yml
@@ -1,11 +1,10 @@
-name: Rust Release Dev
+name: Release Dev
 
 on:
   workflow_dispatch:
 
 env:
   DUCKDB_VERSION: 1.3.2
-  PYTHON_VERSION: 3.9
   RUST_BACKTRACE: 1
 
 concurrency:
@@ -104,6 +103,8 @@ jobs:
       - name: Package
         shell: bash
         run: |
+          ls target/
+          ls target/*/*
           cd target/${{ matrix.target }}/release
           tar czf ../../../${{ matrix.artifact_name }}.tar.gz silk-chiffon
           echo "ASSET_PATH=${{ matrix.artifact_name }}.tar.gz" >> $GITHUB_ENV
@@ -112,89 +113,3 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh release upload "${{ needs.create-release.outputs.tag }}" "${{ env.ASSET_PATH }}" --clobber
-  build-wheels:
-    needs: create-release
-    strategy:
-      fail-fast: false
-      matrix:
-        platform:
-          - runner: ubuntu-22.04
-            os: linux
-            short_target: x86_64
-            target: x86_64-unknown-linux-gnu
-            duckdb_target: linux-amd64
-          - runner: ubuntu-22.04-arm
-            os: linux
-            short_target: aarch64
-            target: aarch64-unknown-linux-gnu
-            duckdb_target: linux-arm64
-          - runner: macos-latest
-            os: macos
-            short_target: arm64
-            target: universal2-apple-darwin
-            duckdb_target: macos-arm64
-    runs-on: ${{ matrix.platform.runner }}
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
-      - name: Setup DuckDB (Linux)
-        if: ${{ matrix.platform.os == 'linux' }}
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y curl unzip build-essential
-          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${DUCKDB_VERSION}/libduckdb-${{ matrix.platform.duckdb_target }}.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
-          unzip libduckdb-${{ matrix.platform.duckdb_target }}.zip -d libduckdb
-          sudo mv libduckdb/duckdb.* /usr/local/include/
-          sudo mv libduckdb/libduckdb.so /usr/local/lib/
-          sudo ldconfig /usr/local/lib
-          rm -rf libduckdb libduckdb-${{ matrix.platform.duckdb_target }}.zip
-      - name: Setup DuckDB (macOS)
-        if: ${{ matrix.platform.os == 'macos' }}
-        run: |
-          brew install duckdb
-
-      - name: Install uv and set Python version
-        uses: astral-sh/setup-uv@v6
-        with:
-          enable-cache: true
-          python-version: ${{ env.PYTHON_VERSION }}
-      - name: Build wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist ${{ matrix.platform.os != 'macos' && '--zig' || '' }}
-          sccache: true
-          manylinux: auto
-      - name: Build free-threaded wheels
-        uses: PyO3/maturin-action@v1
-        with:
-          target: ${{ matrix.platform.target }}
-          args: --release --out dist ${{ matrix.platform.os != 'macos' && '--zig' || '' }} --interpreter python${{ env.PYTHON_VERSION }} --features python
-          sccache: true
-          manylinux: "2014"
-      - name: Sync uv
-        run: uv sync --frozen
-      - name: Install silk_chiffon
-        run: uv pip install silk_chiffon --find-links dist --force-reinstall
-      - name: Check Python formatting
-        run: uv run ruff format --check
-      - name: Check Python linting
-        run: uv run ruff check
-      - name: Check Python types
-        run: uv run pyright
-      - name: Run pytest
-        run: uv run pytest
-
-      - name: Upload wheels to release
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          for wheel in dist/*.whl; do
-            gh release upload "${{ needs.create-release.outputs.tag }}" "$wheel" --clobber
-          done
