--- a/.github/workflows/release-dev-2.yml
+++ b/.github/workflows/release-dev-2.yml
@@ -34,21 +34,22 @@ jobs:
             duckdb_target: macos-arm64
     steps:
       - uses: actions/checkout@v4
-      - name: Setup DuckDB (Linux only)
+      - name: Install packages (Linux only)
         if: ${{ startsWith(matrix.os, 'ubuntu') }}
         run: |
           sudo apt-get update
-          sudo apt-get install -y curl unzip
+          sudo apt-get install -y curl unzip lld
           curl -L -O https://github.com/duckdb/duckdb/releases/download/v${{env.DUCKDB_VERSION}}/libduckdb-${{ matrix.duckdb_target }}.zip && echo "Downloaded DuckDB" || echo "Failed to download DuckDB"
           unzip libduckdb-${{ matrix.duckdb_target }}.zip -d libduckdb
           sudo mv libduckdb/duckdb.* /usr/local/include/
           sudo mv libduckdb/libduckdb.so /usr/local/lib/
           sudo ldconfig /usr/local/lib
           rm -rf libduckdb libduckdb-${{ matrix.duckdb_target }}.zip
-      - name: Setup DuckDB (macOS only)
+      - name: Install packages
         if: ${{ matrix.os == 'macos-latest' }}
         run: |
           brew install duckdb
+          brew install lld
       - name: Cache cargo registry
         uses: actions/cache@v4
         with:
