--- a/.github/workflows/release-dev-3.yml
+++ b/.github/workflows/release-dev-3.yml
@@ -20,8 +20,8 @@ jobs:
             cross: true
     runs-on: ${{ matrix.runner }}
     env:
-      RUSTC_WRAPPER: sccache
-      SCCACHE_GHA_ENABLED: "true"
+      #   RUSTC_WRAPPER: sccache
+      #   SCCACHE_GHA_ENABLED: "true"
       CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
 
     steps:
