--- a/.github/workflows/release-dev-3.yml
+++ b/.github/workflows/release-dev-3.yml
@@ -20,8 +20,8 @@ jobs:
             cross: true
     runs-on: ${{ matrix.runner }}
     env:
-      #   RUSTC_WRAPPER: sccache
-      #   SCCACHE_GHA_ENABLED: "true"
+      RUSTC_WRAPPER: sccache
+      SCCACHE_GHA_ENABLED: "true"
       CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
 
     steps:
@@ -32,6 +32,7 @@ jobs:
           targets: ${{ matrix.target }}
 
       #   - uses: mozilla-actions/sccache-action@v0.0.9
+      - uses: ./actions/sccache-action
 
       - uses: Swatinem/rust-cache@v2
         with:
