--- a/.github/workflows/release-dev-3.yml
+++ b/.github/workflows/release-dev-3.yml
@@ -6,6 +6,12 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  RUSTC_WRAPPER: sccache
+  SCCACHE_GHA_ENABLED: "true"
+  CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
+  DUCKDB_VERSION: 1.3.2
+
 jobs:
   build:
     strategy:
@@ -13,18 +19,37 @@ jobs:
         include:
           - target: x86_64-unknown-linux-gnu
             runner: ubuntu-latest
+            os: linux
+            duckdb_asset: linux-amd64
           - target: aarch64-unknown-linux-gnu
             runner: ubuntu-24.04-arm
+            os: linux
+            duckdb_asset: linux-arm64
           - target: aarch64-apple-darwin
-            runner: ubuntu-latest
-            cross: true
+            runner: macos-latest
+            os: macos
+            duckdb_asset: osx-universal
+
     runs-on: ${{ matrix.runner }}
-    env:
-      RUSTC_WRAPPER: sccache
-      SCCACHE_GHA_ENABLED: "true"
-      CARGO_REGISTRIES_CRATES_IO_PROTOCOL: sparse
 
     steps:
+      - name: Install packages (Linux only)
+        if: ${{ matrix.os == 'linux' }}
+        run: |
+          set -e
+          sudo apt-get update
+          sudo apt-get install -y curl unzip lld
+          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${{env.DUCKDB_VERSION}}/libduckdb-${{ matrix.duckdb_asset }}.zip
+          unzip libduckdb-${{ matrix.duckdb_asset }}.zip -d libduckdb
+          sudo mv libduckdb/duckdb.* /usr/local/include/
+          sudo mv libduckdb/libduckdb.so /usr/local/lib/
+          sudo ldconfig /usr/local/lib
+          rm -rf libduckdb libduckdb-${{ matrix.duckdb_asset }}.zip
+
+      - name: Install packages
+        if: ${{ matrix.os == 'macos' }}
+        run: brew install duckdb lld
+
       - uses: actions/checkout@v4
 
       - uses: dtolnay/rust-toolchain@stable
@@ -38,23 +63,8 @@ jobs:
         with:
           shared-key: "build-${{ matrix.runner }}"
 
-      - name: Setup cargo-zigbuild
-        uses: taiki-e/install-action@v2
-        if: matrix.cross
-        with:
-          tool: cargo-zigbuild
-
-      - name: Setup zig
-        uses: mlugg/setup-zig@v2
-        if: matrix.cross
-
       - name: Build binary
-        run: |
-          if [[ "${{ matrix.cross }}" == "true" ]]; then
-            cargo zigbuild --release --target ${{ matrix.target }}
-          else
-            cargo build --release --target ${{ matrix.target }}
-          fi
+        run: cargo build --release --target ${{ matrix.target }}
 
       - name: Generate version
         id: version
