--- a/.github/workflows/release-dev-3.yml
+++ b/.github/workflows/release-dev-3.yml
@@ -33,6 +33,15 @@ jobs:
     runs-on: ${{ matrix.runner }}
 
     steps:
+      - uses: actions/checkout@v4
+
+      #   - uses: mozilla-actions/sccache-action@v0.0.9
+      - uses: ./.github/workflows/actions/sccache-action
+
+      - uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
+
       - name: Install packages (Linux only)
         if: ${{ matrix.os == 'linux' }}
         run: |
@@ -49,15 +58,6 @@ jobs:
       - name: Install packages
         if: ${{ matrix.os == 'macos' }}
         run: brew install duckdb lld
-
-      - uses: actions/checkout@v4
-
-      - uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-
-      #   - uses: mozilla-actions/sccache-action@v0.0.9
-      - uses: ./.github/workflows/actions/sccache-action
 
       - uses: Swatinem/rust-cache@v2
         with:
@@ -91,6 +91,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           path: ./binaries
+      - run: ls -la ./binaries/**/*
 
       - name: Create GitHub release
         env:
