--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ serde_json = "~1.0"
 serde = { version = "~1.0", features = ["derive"] }
 async-trait = "~0.1"
 strum = "~0.27"
+uuid = { version = "1.18.1", features = ["v4"] }
 
 [features]
 default = []
