Check disk usage before running tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,5 +59,10 @@ jobs:
       - name: Check types
         run: cargo check --all-features
 
+      - name: Check disk usage
+        run: |
+          df -h
+          du -csh ./*
+
       - name: Run tests
         run: cargo test --verbose
