--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,7 @@ arrow = { version = "^56.2.0", features = ["default", "ipc_compression"] }
 clap = { version = "^4.5.48", features = ["default", "derive"] }
 clio = { version = "^0.3.5", features = ["clap-parse"] }
 datafusion = "^50.1.0"
-duckdb = { version = "^1.4.1", features = ["bundled"] }
+duckdb = { version = "^1.4.1", features = ["appender-arrow"] }
 futures = "^0.3.31"
 glob = "^0.3.3"
 pg_escape = "^0.1.1"
@@ -48,6 +48,8 @@ assert_cmd = "^2.0.17"
 predicates = "^3.1.3"
 rand = "^0.9.2"
 criterion = { version = "^0.7.0", features = ["html_reports", "async_tokio"] }
+duckdb = { version = "^1.4.1", features = ["appender-arrow", "chrono"] }
+chrono = "0.4.42"
 
 [[bench]]
 name = "partition_benchmark"
