cast_possible_wrap

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,7 @@ panic = "abort"
 case_sensitive_file_extension_comparisons = "warn"
 cast_lossless = "warn"
 cast_possible_truncation = "warn"
+cast_possible_wrap = "warn"
 needless_pass_by_value = "warn"
 option_as_ref_cloned = "warn"
 similar_names = "warn"
