--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ cast_lossless = "warn"
 cast_possible_truncation = "warn"
 cast_possible_wrap = "warn"
 cast_precision_loss = "warn"
+cast_sign_loss = "warn"
 needless_pass_by_value = "warn"
 option_as_ref_cloned = "warn"
 similar_names = "warn"
