Use the bundled duckdb

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,33 +45,6 @@ jobs:
         if: matrix.os == 'linux'
         run: sudo apt-get update && sudo apt-get install -y lld
 
-      - name: Setup DuckDB cache
-        id: cache-duckdb
-        if: matrix.os == 'linux'
-        uses: actions/cache@v4
-        with:
-          path: |
-            /usr/local/lib/libduckdb.so
-            /usr/local/lib/libduckdb_static.a
-            /usr/local/include/duckdb.h
-            /usr/local/include/duckdb.hpp
-          key: duckdb-${{ env.DUCKDB_VERSION }}-linux-amd64-2025-10-11
-
-      - name: Install DuckDB
-        if: steps.cache-duckdb.outputs.cache-hit != 'true' && matrix.os == 'linux'
-        run: |
-          set -e
-          curl -L -O https://github.com/duckdb/duckdb/releases/download/v${{env.DUCKDB_VERSION}}/libduckdb-${{ matrix.duckdb_asset }}.zip
-          unzip libduckdb-${{ matrix.duckdb_asset }}.zip -d libduckdb
-          sudo mv libduckdb/duckdb.* /usr/local/include/
-          sudo mv libduckdb/libduckdb* /usr/local/lib/
-          sudo ldconfig /usr/local/lib
-          rm -rf libduckdb libduckdb-${{ matrix.duckdb_asset }}.zip
-
-      - name: Configure DuckDB
-        if: steps.cache-duckdb.outputs.cache-hit == 'true' && matrix.os == 'linux'
-        run: sudo ldconfig /usr/local/lib
-
       - name: Install packages
         if: ${{ matrix.os == 'macos' }}
         run: brew install duckdb lld
@@ -82,6 +55,9 @@ jobs:
 
       - name: Build binary
         run: cargo build --release --target ${{ matrix.target }}
+
+      - name: Test binary
+        run: ./target/${{ matrix.target }}/release/silk-chiffon --version
 
       - name: Generate version
         id: version
