Require Cargo.lock to be up to date

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,12 +55,12 @@ jobs:
 
       - name: Build binary
         if: ${{ matrix.os == 'macos' }}
-        run: cargo build --release --target ${{ matrix.target }}
+        run: cargo build --locked --release --target ${{ matrix.target }}
 
       - name: Build binary
         if: ${{ matrix.os == 'linux' }}
         # links against older version of libc, makes it more compatible with older distros
-        run: cargo zigbuild --release --target ${{ matrix.target }}
+        run: cargo zigbuild --locked --release --target ${{ matrix.target }}
 
       - name: Test binary
         run: ./target/${{ matrix.target }}/release/silk-chiffon --version
